<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/topBarCardView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/posterTopBar"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:contentDescription="@string/postertopbar"
                    android:scaleType="centerCrop"
                    android:src="@drawable/poster_crimes" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/foregroundpostertopbar"
                    android:src="@drawable/card_detail_foreground" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/backButton"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/ic_back"
                        android:contentDescription="@string/backbutton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/roundedImageView"
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/subPoster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/subPoster"
            android:elevation="10dp"
            android:src="@drawable/poster_crimes"
            app:layout_constraintBottom_toBottomOf="@+id/topBarCardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBarCardView"
            app:riv_corner_radius="10dp" />

        <TextView
            android:id="@+id/titleDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/dummyTitle"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:maxLines="3"
            app:layout_constraintTop_toBottomOf="@+id/topBarCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/dummyDate"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/titleDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/titleOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subPoster" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/dividerBody"
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:scaleType="centerCrop"
            android:src="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleOverview"
            app:riv_corner_radius="2dp" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/loremIpsum"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerBody" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/dividerBodyGenre"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:src="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview"
            app:riv_corner_radius="2dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/favorite"
            android:src="@drawable/favorite_selector"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerBodyGenre"
            app:rippleColor="@color/primaryColor" />

        <TextView
            android:id="@+id/userScore"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="17dp"
            android:layout_marginStart="80dp"
            android:background="@drawable/background_user_score"
            android:gravity="center"
            android:text="@string/dummyUserScore"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerBodyGenre" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
